crates/lang-parse/tests/snapshots/lexer__lexer_basic addition, no space.snap
---
source: crates/lang-parse/tests/lexer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    Spanned {
        span: 0..1,
        value: LiteralInt(
            "1",
        ),
    },
    Spanned {
        span: 1..2,
        value: OperatorAdd,
    },
    Spanned {
        span: 2..3,
        value: LiteralInt(
            "1",
        ),
    },
]
