crates/lang-parse/tests/snapshots/lexer__lexer_basic expr string.snap
---
source: crates/lang-parse/tests/lexer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    Spanned {
        span: 0..1,
        value: FormatStringStart,
    },
    Spanned {
        span: 1..8,
        value: StringContent(
            "string ",
        ),
    },
    Spanned {
        span: 13..14,
        value: StringFormatOpen,
    },
    Spanned {
        span: 9..13,
        value: Identifier(
            "with",
        ),
    },
    Spanned {
        span: 13..14,
        value: StringFormatClose,
    },
    Spanned {
        span: 14..25,
        value: StringContent(
            " expression",
        ),
    },
    Spanned {
        span: 25..26,
        value: FormatStringEnd,
    },
]
