crates/lang-parse/tests/snapshots/lexer__lexer_comment.snap
---
source: crates/lang-parse/tests/lexer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    Spanned {
        span: 0..1,
        value: Identifier(
            "a",
        ),
    },
    Spanned {
        span: 1..2,
        value: Whitespace(
            " ",
        ),
    },
    Spanned {
        span: 2..3,
        value: OperatorAssignment,
    },
    Spanned {
        span: 3..4,
        value: Whitespace(
            " ",
        ),
    },
    Spanned {
        span: 4..5,
        value: LiteralInt(
            "1",
        ),
    },
    Spanned {
        span: 5..6,
        value: Whitespace(
            " ",
        ),
    },
    Spanned {
        span: 6..16,
        value: SingleLineComment(
            "// comment",
        ),
    },
]
