crates/lang-parse/tests/snapshots/lexer__lexer_escaped bracket string.snap
---
source: crates/lang-parse/tests/lexer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    Spanned {
        span: 0..35,
        value: LiteralString(
            "string { with } escaped bracket",
        ),
    },
]
